# default_bot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 19210f31282f_init.py  82c4660c731e_payments.py
src/: main.py
src/api/: routes.py  yookassa.py
src/bot/: router.py
src/bot/keyboard/: start.py
src/bot/routers/: feedback_router.py  payment_router.py  start_router.py
src/core/: settings.py
src/core/database/: base.py  db_helper.py
src/core/lifespan/: lifespan.py
src/core/logging/: logging.py
src/core/midllewares/: dependency_middleware.py
src/dependencies/: di_annotated.py
src/models/: __init__.py  base.py  payments.py  users.py
src/repositories/: payment_repo.py  payment_yoocassa.py  users_repo.py
src/scheduler/: scheduler.py
src/scheduler/tasks/: __init__.py  send_daily_message.py
src/schemas/: enum.py  payment.py  users.py
src/services/: payments.py  user_service.py
